--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Arihant Gaur</name>
               </p>
-              <p>I am a final year student at <a href="https://vnit.ac.in/">VNIT, Nagpur</a>. I am also a research intern under the guidance of Prof. <a href="https://pmiraldo.github.io/">Pedro Miraldo</a> and <a href="https://goncalo120.github.io/">Gonçalo Pais</a> at Instituto Superior Técnico (IST), Lisbon, Portugal.
+              <p>I am a research intern at Mitsubishi Electric Research Laboratories (MERL), working under Prof. <a href="https://pmiraldo.github.io/">Pedro Miraldo</a>. Previously, I was a Bachelor's student at <a href="https://vnit.ac.in/">VNIT, Nagpur</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:arihant.gaur@gmail.com">Email</a> &nbsp/&nbsp
@@ -41,7 +41,7 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>Areas of Interest</heading>
               <p>
-                I am currently working on 3D registration, holistic scene understanding, visual odometry and domain adaptation. I have previously worked on structure from motion, image stitching and panorama, monocular visual odometry and HCI. Currently, this website is under development. For more details on my projects, please refer to my CV.
+                I am currently working on neural implicit representation for 3D objects. I have previously worked on structure from motion, image stitching and panorama, monocular visual odometry and HCI. Currently, this website is under development. For more details on my projects, please refer to my CV.
               </p>
             </td>
           </tr>
@@ -51,7 +51,9 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
-                <li><b> January 2022</b>: Received Academic Excellence Prize for exhibiting the best performance in the 3rd year of B.Tech. Electrical and Electronics Engg. program</a> </li>
+                <li><b> August 2022</b>: I moved to Cambridge, MA as a research intern at MERL.</a> </li>
+                <li><b> May 2022</b>: Finished by Bachelor's degree in Electrical and Electronics Engineering, bagging Academic Excellence Prize for securing 2nd highest CGPA in my department.</a> </li>
+                <li><b> January 2022</b>: Received Academic Excellence Prize for exhibiting the best performance in the 3rd year of B.Tech. Electrical and Electronics Engg. program.</a> </li>
                 <li><b> October 2021</b>: My paper "Open-Set Multi-Source Multi-Target Domain Adaptation" got accepted at the NeurIPS'21 pre - registration <a href="https://preregister.science/">workshop</a>. Paper: <a href="https://preregister.science/papers_21neurips/11_paper.pdf">Link</a>, Video: <a href="https://www.youtube.com/watch?v=dflYL6WBZI4&ab_channel=preregister-ml">Link</a> </li>
                 <li><b> May 2021</b>: Started working as a research intern at IST, Lisbon.</a> </li>
                 <li><b> August 2020</b>: Bagged first prize at the <a href="https://www.sih.gov.in/SoftwarefinalResult2020">Smart India Hackathon, 2020</a> (Software Edition, Team IvLabs)</li>
@@ -65,7 +67,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 31-01-2022
+                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 13-11-2022
               </p>
             </td>
           </tr>
