Fix CV directory

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:arihant.gaur@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/arihantgaur/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://scholar.google.co.in/citations?user=3VFXEJQAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/GaurArihant">Twitter</a> &nbsp/&nbsp
