--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/my_img.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my_img.png" class="hoverZoomLink"></a>
+              <a href="images/my_img.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my_img.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
