--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Arihant Gaur</name>
               </p>
-              <p>I am currently working under Prof. <a href="https://pmiraldo.github.io/">Pedro Miraldo</a> in my own time. I was an intern under him at Mitsubishi Electric Research Laboratories (MERL) and IST, Lisbon. Previously, I was a Bachelor's student at <a href="https://vnit.ac.in/">VNIT, Nagpur</a>.
+              <p>I am currently a short-time intern at Metacube Software Pvt. Ltd., working on computer vision. Previously, I have done stints at Mitsubishi Electric Research Laboratories (MERL) and IST, Lisbon. Previously, I was a Bachelor's student at <a href="https://vnit.ac.in/">VNIT, Nagpur</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:arihant.gaur@gmail.com">Email</a> &nbsp/&nbsp
@@ -51,8 +51,10 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
-		<li><b> October 2023</b>: I will be joining as a masters student at Saarland University.</a> </li>
-		<li><b> April 2023</b>: I returned back to India.</a> </li>
+		<li><b> April 2024</b>: I will be joining as a masters student at Saarland University.</a> </li>
+		<li><b> October 2023</b>: I started as a short-time intern at Metacube Software Pvt. Ltd.</a> </li>
+		<li><b> October 2023</b>: My work at MERL, has been accepted to 3DV 2024. It was also granted a US patent separately.</a> </li>
+		<li><b> April 2023</b>: I returned back to India. Continued working on the project remotely.</a> </li>
 		<li><b> September 2022</b>: Officially received Bachelor's degree in Electrical and Electronics Engineering, bagging Academic Excellence Prize for securing 2nd highest CGPA in my department. </a> </li>
                 <li><b> August 2022</b>: I moved to Cambridge, MA as a research intern at MERL.</a> </li>
                 <li><b> May 2022</b>: Finished by Bachelor's degree in Electrical and Electronics Engineering</a> </li>
