--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
               <p style="text-align:center">
                 <name>Arihant Gaur</name>
               </p>
-              <p>I am currently a short-time intern at Metacube Software Pvt. Ltd., working on computer vision. Previously, I have done stints at Mitsubishi Electric Research Laboratories (MERL) and IST, Lisbon. Previously, I was a Bachelor's student at <a href="https://vnit.ac.in/">VNIT, Nagpur</a>.
+              <p>I am currently a student at Saaland University (MS Visual Computing).
+                I am also working part-time as a contractor at Metacube Software Pvt. Ltd., working on computer vision.</a>.
               </p>
               <p style="text-align:center">
-                <a href="mailto:arihant.gaur@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="mailto:arga00002@stud.uni-saarland.de">Email</a> &nbsp/&nbsp
                 <a href="CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/arihantgaur/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://scholar.google.co.in/citations?user=3VFXEJQAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://twitter.com/GaurArihant">Twitter</a> &nbsp/&nbsp
+                <a href="https://x.com/GaurArihant">X (formerly Twitter)</a> &nbsp/&nbsp
                 <a href="https://github.com/FlagArihant2000">GitHub</a>
               </p>
             </td>
@@ -41,7 +42,7 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>Areas of Interest</heading>
               <p>
-                I am currently working on neural implicit representation for 3D objects and NeRF. I have previously worked on structure from motion, image stitching and panorama and visual odometry. This website is still under development. For more details on my projects, please refer to my CV.
+                My research experience has mostly been on 3D computer vision. At Metacube, I am working on 3D skeleton based action recognition. Previously at MERL, I've worked on research project related to implicit neural representations for 3D objects and NeRF to extent. This website is still under development. For more details on my projects, please refer to my CV :D.
               </p>
             </td>
           </tr>
@@ -51,7 +52,7 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
-		<li><b> April 2024</b>: I will be joining as a masters student at Saarland University.</a> </li>
+		<li><b> April 2024</b>: I've joined as a masters student at Saarland University. Switched from intern to contractor at Metacube</a> </li>
 		<li><b> October 2023</b>: I started as a short-time intern at Metacube Software Pvt. Ltd.</a> </li>
 		<li><b> October 2023</b>: My work at MERL, has been accepted to 3DV 2024. It was also granted a US patent separately.</a> </li>
 		<li><b> April 2023</b>: I returned back to India. Continued working on the project remotely.</a> </li>
@@ -72,7 +73,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 05-09-2023
+                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 10-06-2024
               </p>
             </td>
           </tr>
