--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Arihant Gaur</name>
               </p>
               <p>I am currently a student at Saaland University (MS Visual Computing).
-                I am also working part-time as a contractor at Metacube Software Pvt. Ltd., working on computer vision.</a>.
+                I am also working part-time as a contractor at Metacube Software Pvt. Ltd., working on computer vision.</a>
               </p>
               <p style="text-align:center">
                 <a href="mailto:arga00002@stud.uni-saarland.de">Email</a> &nbsp/&nbsp
