--- a/index.html
+++ b/index.html
@@ -42,11 +42,41 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>Areas of Interest</heading>
               <p>
-                My research experience has mostly been on 3D computer vision. At Metacube, I am working on 3D skeleton based action recognition. Previously at MERL, I've worked on research project related to implicit neural representations for 3D objects and NeRF to extent. This website is still under development. For more details on my projects, please refer to my CV :D.
+                My research experience has mostly been on 3D computer vision. At Metacube, I am working on 3D skeleton based action recognition. Previously at MERL, I've worked on implicit neural representations for 3D objects and NeRFs to extent. This website is still under development. Please refer to my CV for more details.
               </p>
             </td>
           </tr>
         </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:10px;width:100%;vertical-align:middle">
+            <heading>Research</heading>
+          </td>
+        </tr>
+      </tbody></table>
+        
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
+
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/origin.png" alt="origin" style="border-style: none", width="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://merl.com/publications/TR2024-031">
+                <span class="papertitle">Oriented-grid Encoder for 3D Implicit Representations</span>
+              </a>
+              <br>
+              <strong>Arihant Gaur</strong>,
+              <a href="https://goncalo120.github.io/">Gonçalo Dias Pais</a>,
+              <a href="https://pmiraldo.github.io/">Pedro Miraldo</a>
+              <br>
+              <em>3DV</em>, 2024
+              <br>
+              <a href="https://arxiv.org/abs/2402.06752">arxiv</a>
+              <p>Introduces explicit 3D grid based encoding for structured 3D implicit representation</p>
+            </td>
+          </tr>
+        </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:10px;width:100%;vertical-align:middle">
