added nsmt degaa paper

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
-
+          <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/origin.png" alt="origin" style="border-style: none", width="160">
             </td>
@@ -74,6 +74,30 @@
               <a href="https://arxiv.org/abs/2402.06752">arxiv</a>
               <p>Introduces explicit 3D grid based encoding for structured 3D implicit representation</p>
             </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/degaa.png" alt="origin" style="border-style: none", width="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://ivlabs.github.io/os-nsmt/">
+                <span class="papertitle">Open-Set Multi-Source Multi-Target Domain Adaptation</span>
+              </a>
+              <br>
+              <a href="https://rohitlal.net/">Rohit Lal</a>,
+              <strong>Arihant Gaur</strong>,
+              <a href="https://aadhithya14.github.io/">Aadhithya Iyer</a>,
+              <a href="https://abd-01.github.io/">Muhammed Abdullah Shaikh</a>,
+              <a href="https://www.linkedin.com/in/ritik-agrawal-6b7718189/">Ritik Agrawal</a>,
+              <a href="https://mec.vnit.ac.in/people/sschiddarwar/about-me/">Shital Chiddarwar</a>
+              <br>
+              <em>NeurIPS</em>, 2021 (Pre-registration workshop)
+              <br>
+              <a href="https://arxiv.org/abs/2302.00995">arxiv</a> / 
+              <a href="https://github.com/IvLabs/os-nsmt">code</a>
+              <p>Proposed concept for Multi-Source Multi-Target (nSmT) domain adaptation</p>
+            </td>
+
           </tr>
         </tbody></table>
 
