--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>Areas of Interest</heading>
               <p>
-                My research experience has mostly been on 3D computer vision. At Metacube, I am working on 3D skeleton based action recognition. Previously at MERL, I've worked on implicit neural representations for 3D objects and NeRFs to extent. This website is still under development. Please refer to my CV for more details.
+                My research experience has mostly been on 3D computer vision. At Metacube, I am working on 3D skeleton based action recognition. Previously at MERL, I've worked on implicit neural representations for 3D objects and NeRFs to extent. Please refer to my CV for more details, or mail for enquiries/questions.
               </p>
             </td>
           </tr>
@@ -97,7 +97,28 @@
               <a href="https://github.com/IvLabs/os-nsmt">code</a>
               <p>Proposed concept for Multi-Source Multi-Target (nSmT) domain adaptation</p>
             </td>
-
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/btech-thesis.png" alt="origin" style="border-style: none", width="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://drive.google.com/file/d/1xo9HbohYlvSA8eYn6ujonNTUD9a5sWOF/view?usp=sharing">
+                <span class="papertitle">Health Estimation of Electrical Transformer</span>
+              </a>
+              <br>
+              <strong>Arihant Gaur</strong>,
+              <a href="https://aadhithya14.github.io/">Aadhithya Iyer</a>,
+              <a href="https://www.linkedin.com/in/ganesh-rohit-dhulipala-b4728b1b8/">Ganesh Rohit</a>,
+              <a href="https://www.linkedin.com/in/nishit-khandelwal-370802193/">Nishit Khandelwal</a>,
+              <a href="https://www.linkedin.com/in/vinit-kavalekar-404326188/">Vinit Kavalekar</a>,
+              <a href="https://www.linkedin.com/in/vyankatesh-muley-5740b2193/">Vyankatesh Muley</a>
+              <br>
+              <em>B.Tech. thesis</em>, 2022
+              <br>
+              <a href="https://drive.google.com/file/d/1xo9HbohYlvSA8eYn6ujonNTUD9a5sWOF/view?usp=sharing">PDF</a>
+              <p>Exploring machine learning techniques to summarize overall health of transformer using various online and offline electrical transformer measurements</p>
+            </td>
           </tr>
         </tbody></table>
 
@@ -127,7 +148,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a>. (Still developing the website)| Last Updated: 19-10-2024
+                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a> | Last Updated: 19-10-2024
               </p>
             </td>
           </tr>
