--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<li><b> April 2023</b>: I returned back to India. Continued working on the project remotely.</a> </li>
 		<li><b> September 2022</b>: Officially received Bachelor's degree in Electrical and Electronics Engineering, bagging Academic Excellence Prize for securing 2nd highest CGPA in my department. </a> </li>
                 <li><b> August 2022</b>: I moved to Cambridge, MA as a research intern at MERL.</a> </li>
-                <li><b> May 2022</b>: Finished by Bachelor's degree in Electrical and Electronics Engineering</a> </li>
+                <li><b> May 2022</b>: Finished my Bachelor's degree in Electrical and Electronics Engineering</a> </li>
                 <li><b> January 2022</b>: Received Academic Excellence Prize for exhibiting the best performance in the 3rd year of B.Tech. Electrical and Electronics Engg. program.</a> </li>
                 <li><b> October 2021</b>: My paper "Open-Set Multi-Source Multi-Target Domain Adaptation" got accepted at the NeurIPS'21 pre - registration <a href="https://preregister.science/">workshop</a>. Paper: <a href="https://preregister.science/papers_21neurips/11_paper.pdf">Link</a>, Video: <a href="https://www.youtube.com/watch?v=dflYL6WBZI4&ab_channel=preregister-ml">Link</a> </li>
                 <li><b> May 2021</b>: Started working as a research intern at IST, Lisbon.</a> </li>
