update for calendar Q1

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
               <p style="text-align:center">
                 <name>Arihant Gaur</name>
               </p>
-              <p>I am currently a student at Saaland University (MS Visual Computing).
-                I am also working part-time as a contractor at Metacube Software Pvt. Ltd., working on computer vision.</a>
+              <p>I am a third-semester student at Saarland University (MS Visual Computing)</a>
               </p>
               <p style="text-align:center">
                 <a href="mailto:arga00002@stud.uni-saarland.de">Email</a> &nbsp/&nbsp
@@ -33,7 +32,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/my_img.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my_img.jpg" class="hoverZoomLink"></a>
+              <a href="images/my_img.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my_img.jpeg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -42,7 +41,7 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>Areas of Interest</heading>
               <p>
-                My research experience has mostly been on 3D computer vision. At Metacube, I am working on 3D skeleton based action recognition. Previously at MERL, I've worked on implicit neural representations for 3D objects and NeRFs to extent. Please refer to my CV for more details, or mail for enquiries/questions.
+                My research experience has mostly been on 3D computer vision. At Metacube, I worked on 3D skeleton based action recognition. Previously at MERL, I've worked on implicit neural representations for 3D objects and NeRFs to extent. Please refer to my CV for more details, or mail for enquiries/questions.
               </p>
             </td>
           </tr>
@@ -127,7 +126,9 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
-		<li><b> April 2024</b>: I've joined as a masters student at Saarland University. Switched from intern to contractor at Metacube</a> </li>
+    <li><b> April 2025</b>: I will start my thesis project at the Max Planck Institute for Informatics this semester</a> </li>
+		<li><b> February 2025</b>: Website for submission to rendering competition is live. Check out here: <a href="neotracer/index.html">Link</a></li> </a> </li>
+    <li><b> April 2024</b>: I've joined as a masters student at Saarland University. Switched from intern to contractor at Metacube</a> </li>
 		<li><b> October 2023</b>: I started as a short-time intern at Metacube Software Pvt. Ltd.</a> </li>
 		<li><b> October 2023</b>: My work at MERL, has been accepted to 3DV 2024. It was also granted a US patent separately.</a> </li>
 		<li><b> April 2023</b>: I returned back to India. Continued working on the project remotely.</a> </li>
@@ -148,7 +149,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a> | Last Updated: 19-10-2024
+                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a> | Last Updated: 27-03-2025
               </p>
             </td>
           </tr>
