--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <heading>News</heading>
               <p>
     <li><b> April 2025</b>: I will start my thesis project at the Max Planck Institute for Informatics this semester</a> </li>
-		<li><b> February 2025</b>: Website for submission to rendering competition is live. Check out here: <a href="neotracer/index.html">Link</a></li> </a> </li>
+		<li><b> February 2025</b>: Website for the submission to rendering competition is live. Check it out here: <a href="neotracer/index.html">Link</a></li> </a> </li>
     <li><b> April 2024</b>: I've joined as a masters student at Saarland University. Switched from intern to contractor at Metacube</a> </li>
 		<li><b> October 2023</b>: I started as a short-time intern at Metacube Software Pvt. Ltd.</a> </li>
 		<li><b> October 2023</b>: My work at MERL, has been accepted to 3DV 2024. It was also granted a US patent separately.</a> </li>
