--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
               <p style="text-align:center">
                 <name>Arihant Gaur</name>
               </p>
-              <p>I am a third-semester student at Saarland University (MS Visual Computing)</a>
+              <p>I am a fourth-semester student at Saarland University (M.Sc. Computer Science), currently working on my thesis at 4DQV lab </a>
               </p>
               <p style="text-align:center">
                 <a href="mailto:arga00002@stud.uni-saarland.de">Email</a> &nbsp/&nbsp
                 <a href="CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/arihantgaur/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://scholar.google.co.in/citations?user=3VFXEJQAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://x.com/GaurArihant">X (formerly Twitter)</a> &nbsp/&nbsp
+                <a href="https://x.com/GaurArihant">X (Twitter)</a> &nbsp/&nbsp
                 <a href="https://github.com/FlagArihant2000">GitHub</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/my_img.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my_img.jpeg" class="hoverZoomLink"></a>
+              <a href="images/my_img_old.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my_img_old.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -41,7 +41,7 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>Areas of Interest</heading>
               <p>
-                My research experience has mostly been on 3D computer vision. At Metacube, I worked on 3D skeleton based action recognition. Previously at MERL, I've worked on implicit neural representations for 3D objects and NeRFs to extent. Please refer to my CV for more details, or mail for enquiries/questions.
+                My research experience has mostly been on 3D computer vision. At Metacube, I worked on 3D skeleton based action recognition. Previously at MERL, I've worked on neural field representations for 3D objects. Please refer to my CV for more details, or mail for questions.
               </p>
             </td>
           </tr>
@@ -70,7 +70,9 @@
               <br>
               <em>3DV</em>, 2024
               <br>
-              <a href="https://arxiv.org/abs/2402.06752">arxiv</a>
+              <a href="https://arxiv.org/abs/2402.06752">arxiv</a> / 
+              <a href="https://patents.google.com/patent/US20250131651A1">patent (US)</a> /
+              <a href="https://patents.google.com/patent/JP2025071766A">patent (JP)</a>
               <p>Introduces explicit 3D grid based encoding for structured 3D implicit representation</p>
             </td>
           </tr>
@@ -102,7 +104,7 @@
               <img src="images/btech-thesis.png" alt="origin" style="border-style: none", width="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://drive.google.com/file/d/1xo9HbohYlvSA8eYn6ujonNTUD9a5sWOF/view?usp=sharing">
+              <a href="btech-thesis.pdf">
                 <span class="papertitle">Health Estimation of Electrical Transformer</span>
               </a>
               <br>
@@ -115,8 +117,65 @@
               <br>
               <em>B.Tech. thesis</em>, 2022
               <br>
-              <a href="https://drive.google.com/file/d/1xo9HbohYlvSA8eYn6ujonNTUD9a5sWOF/view?usp=sharing">PDF</a>
+              <a href="btech-thesis.pdf">PDF</a>
               <p>Exploring machine learning techniques to summarize overall health of transformer using various online and offline electrical transformer measurements</p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:10px;width:100%;vertical-align:middle">
+            <heading>Other Projects</heading>
+          </td>
+        </tr>
+      </tbody></table>
+        
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="neotracer/images/final.jpeg" alt="project1" style="border-style: none", width="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="neotracer/index.html">
+                <span class="papertitle">NeoTracer: Volumetric path tracer with MIS</span>
+              </a>
+              <br>
+              <em>October 2024 &mdash; February 2025</em>
+              <br>
+              <a href="https://github.com/TheRealBaka/NeoTracer">code</a> /  
+              <a href="neotracer/index.html">project page</a>
+              <p>Built ray tracer as a part of Computer Graphics - I (<a href="https://graphics.cg.uni-saarland.de/courses/cg1-2024/index.html">Link</a>) course offered at UdS. Bagged third prize for rendering competition hosted during the course</p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/sfm.png" alt="project2" style="border-style: none", width="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://github.com/FlagArihant2000/sfm-mvs">
+                <span class="papertitle">Basic Structure from Motion</span>
+              </a>
+              <br>
+              <em>July 2020 &mdash; September 2020</em>
+              <br>
+              <a href="https://github.com/FlagArihant2000/sfm-mvs">code</a>
+              <p>Undertook small project to implement basic blocks of incremental structure from motion. Initial intent was to re-create COLMAP in python, however soon realized issues with the approach :)</p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/vis-od.gif" alt="project3" style="border-style: none", width="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://github.com/FlagArihant2000/visual-odometry">
+                <span class="papertitle">Basic Monocular Visual Odometry</span>
+              </a>
+              <br>
+              <em>March 2020 &mdash; May 2020</em>
+              <br>
+              <a href="https://github.com/FlagArihant2000/visual-odometry">code</a>
+              <p>Again a self-learning project, to understand visual odometry before moving to SfM. Implemented 2D - 2D and 3D - 2D visual odometry</p>
             </td>
           </tr>
         </tbody></table>
@@ -126,11 +185,11 @@
             <td style="padding:10px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
-    <li><b> April 2025</b>: I will start my thesis project at the Max Planck Institute for Informatics this semester</a> </li>
+    <li><b> April 2025</b>: I will start my thesis project at the Max Planck Institute for Informatics (4DQV) this semester</a> </li>
 		<li><b> February 2025</b>: Website for the submission to rendering competition is live. Check it out here: <a href="neotracer/index.html">Link</a></li> </a> </li>
     <li><b> April 2024</b>: I've joined as a masters student at Saarland University. Switched from intern to contractor at Metacube</a> </li>
 		<li><b> October 2023</b>: I started as a short-time intern at Metacube Software Pvt. Ltd.</a> </li>
-		<li><b> October 2023</b>: My work at MERL, has been accepted to 3DV 2024. It was also granted a US patent separately.</a> </li>
+		<li><b> October 2023</b>: My work at MERL, has been accepted to 3DV 2024.</a> </li>
 		<li><b> April 2023</b>: I returned back to India. Continued working on the project remotely.</a> </li>
 		<li><b> September 2022</b>: Officially received Bachelor's degree in Electrical and Electronics Engineering, bagging Academic Excellence Prize for securing 2nd highest CGPA in my department. </a> </li>
                 <li><b> August 2022</b>: I moved to Cambridge, MA as a research intern at MERL.</a> </li>
@@ -149,7 +208,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a> | Last Updated: 27-03-2025
+                The website template is the courtesy of <a href="https://jonbarron.info/">Jon Barron</a> | Last Updated: 26-07-2025
               </p>
             </td>
           </tr>
